Fixed footer issue on mobile device

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -125,6 +125,12 @@ nav {
     text-decoration: none;
   }
 
+  .footer_links {
+    width: 100%;
+    max-height: 60px;
+    color: $white;
+  }
+
   img {
     width: 50px;
     height: 50px;
